@@ -1,3 +1,8 @@
+2004-03-29  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconf-database.c:
+	(safe_g_hash_table_insert): remove - no hash table here.
+
 2004-03-24  Mark McLoughlin  <mark@skynet.ie>
 	
 	* gconf/gconf-database.c: (impl_ConfigDatabase_set): don't
